fixed some alignment and overflow issues. converted guess matrix to grid. grid is too big for some reason?

--- a/src/app/Components/Guess Module/Guess Matrix/Guess Matrix.component.css
+++ b/src/app/Components/Guess Module/Guess Matrix/Guess Matrix.component.css
@@ -3,9 +3,10 @@ div {
   min-width: 106px;
   max-height: 400px;
   min-height: 360px;
-  height: calc(96vw + 25px);
-  width: calc(80vw + 20px);
-  justify-content: space-between;
-  align-items: flex-start;
+  height: calc(100vw - var(--header-height) - var(--keyboard-height));
+  width: 100%;
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-gap: 5px;
   padding: 10px;
 }
